# cleo-bench

./: .gitignore  README.md  go.sh  pyproject.toml
cleo_bench/: __init__.py  cli.py  constants.py  extract.py  io_utils.py  judge.py  models.py  numeric.py  pipeline.py  review.py  scoring.py  stackexchange.py
inspect_tasks/: cleo_bench_eval.py
scripts/: pick_random_untried.py  verify_sagemath_mcp_solver.py
tests/: test_extract.py  test_inspect_task_solver.py  test_judge.py  test_numeric.py  test_pipeline_integration.py  test_review.py  test_scoring.py  test_stackexchange.py
