[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cleo-bench"
version = "0.1.0"
description = "Cleo Bench: StackExchange integral benchmark pipeline and Inspect eval integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.0",
  "sympy>=1.12",
  "mpmath>=1.3.0",
  "antlr4-python3-runtime>=4.11,<4.12",
  "inspect_ai>=0.3.172",
]

[project.scripts]
cleo-bench = "cleo_bench.cli:main"

[project.optional-dependencies]
mcp = [
  "mcp>=1.23.0",
]

[tool.setuptools]
packages = ["cleo_bench"]

[tool.setuptools.package-data]
cleo_bench = ["py.typed"]
